fixed a form wrapping issue on account page

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -165,6 +165,9 @@ fieldset.group-account-basics {
   margin-bottom: 14px;
   }
 
+#edit-name-wrapper {
+  clear: both;
+  }
 
 /* Biblio Settings View */
 
